kubernetes/apps/default/mkdocs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mkdocs
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "docs.ragas.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mkdocs
          port: 8000
